--- a/bomba.qsf
+++ b/bomba.qsf
@@ -38,7 +38,7 @@
 
 set_global_assignment -name FAMILY "Cyclone II"
 set_global_assignment -name DEVICE EP2C35F672C6
-set_global_assignment -name TOP_LEVEL_ENTITY bomba
+set_global_assignment -name TOP_LEVEL_ENTITY display
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION "13.0 SP1"
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "14:08:36  MAY 24, 2018"
 set_global_assignment -name LAST_QUARTUS_VERSION "13.0 SP1"
@@ -62,8 +62,9 @@ set_global_assignment -name VHDL_FILE signal_generator.vhd
 set_global_assignment -name VHDL_FILE half_second_tick.vhd
 set_global_assignment -name VHDL_FILE quarter_second_tick.vhd
 set_global_assignment -name VHDL_FILE display.vhd
+set_global_assignment -name VHDL_FILE register_4b.vhd
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
-set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
 set_global_assignment -name INCREMENTAL_VECTOR_INPUT_SOURCE "C:/Users/joaofnds/Desktop/bomba/Waveform.vwf"
+set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
