--- a/bomba.qsf
+++ b/bomba.qsf
@@ -38,7 +38,7 @@
 
 set_global_assignment -name FAMILY "Cyclone II"
 set_global_assignment -name DEVICE EP2C35F672C6
-set_global_assignment -name TOP_LEVEL_ENTITY display
+set_global_assignment -name TOP_LEVEL_ENTITY bomba
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION "13.0 SP1"
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "14:08:36  MAY 24, 2018"
 set_global_assignment -name LAST_QUARTUS_VERSION "13.0 SP1"
