--- a/bomba.qsf
+++ b/bomba.qsf
@@ -62,9 +62,11 @@ set_global_assignment -name VHDL_FILE signal_generator.vhd
 set_global_assignment -name VHDL_FILE half_second_tick.vhd
 set_global_assignment -name VHDL_FILE quarter_second_tick.vhd
 set_global_assignment -name VHDL_FILE display.vhd
-set_global_assignment -name VHDL_FILE register_4b.vhd
+set_global_assignment -name VHDL_FILE display_mux.vhd
+set_global_assignment -name VHDL_FILE integer_register.vhd
+set_global_assignment -name VHDL_FILE display_controller.vhd
+set_global_assignment -name INCREMENTAL_VECTOR_INPUT_SOURCE "C:/Users/joaofnds/Desktop/bomba/Waveform.vwf"
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
-set_global_assignment -name INCREMENTAL_VECTOR_INPUT_SOURCE "C:/Users/joaofnds/Desktop/bomba/Waveform.vwf"
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
