--- a/bomba.qsf
+++ b/bomba.qsf
@@ -494,4 +494,5 @@ set_location_assignment PIN_V24 -to GPIO_1[32]
 set_location_assignment PIN_V23 -to GPIO_1[33]
 set_location_assignment PIN_W25 -to GPIO_1[34]
 set_location_assignment PIN_W23 -to GPIO_1[35]
+set_global_assignment -name VHDL_FILE countdown_setter.vhd
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
